# Diary

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: action.yaml  actions.yaml
deploy/: .env  docker-compose.yaml  nginx.conf
graduate_work/: asgi.py  settings.py  urls.py  wsgi.py
src/: manage.py  requirements.txt
src/core/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
src/core/migrations/: 0001_initial.py  0002_user_id_tg.py  0003_alter_user_id_tg.py  0004_alter_user_id_tg.py  0005_rename_id_tg_user_verification_code.py  0006_remove_user_verification_code.py
src/goals/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
src/goals/migrations/: 0001_initial.py  0002_goal.py  0003_goalcomment.py  0004_board_goalcategory_board_boardparticipant.py  0006_alter_goalcategory_board.py
src/telegrambot/: admin.py  models.py  serializers.py  urls.py  views.py
src/telegrambot/fsm/: base.py  memory.py
src/telegrambot/management/commands/: runbot.py
src/telegrambot/migrations/: 0001_initial.py
src/telegrambot/tg/: client.py
src/todolist/: asgi.py  settings.py  urls.py  wsgi.py
