[tools.isort]
py_version = 310
profile = 'django'
line_length = 120
multi_line_output = 2
known_first_party = ["todolist", "core"]

[tool.flake8]
max-line-length = 120
per-file-ignores = """
   venv
"""

[tool.poetry]
name = "poetryproject"
version = "0.1.0"
description = ""
authors = ["pavellis <manbyak5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
